--- a/external-import/malpedia/docker-compose.yml
+++ b/external-import/malpedia/docker-compose.yml
@@ -10,9 +10,10 @@ services:
       - CONNECTOR_SCOPE=malpedia
       - CONNECTOR_LOG_LEVEL=error
       - CONNECTOR_EXPOSE_METRICS=false
-      - MALPEDIA_AUTH_KEY= # Empty key only fetches TLP:WHITE information
+      - CONNECTOR_UPDATE_EXISTING_DATA=false
+      - "MALPEDIA_AUTH_KEY= # Empty key only fetches TLP:WHITE information"
       - MALPEDIA_INTERVAL_SEC=86400 # Run once every day
-      - MALPEDIA_IMPORT_INTRUSION_SETS=false
+      - MALPEDIA_IMPORT_INTRUSION_SETS=true
       - MALPEDIA_IMPORT_YARA=true
       - MALPEDIA_CREATE_INDICATORS=true
       - MALPEDIA_CREATE_OBSERVABLES=true
